--- a/DartTeam/index.html
+++ b/DartTeam/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Document </title>
+    <title> Andres Sosa, Danellys Iriarte y Ana Mauri </title>
 </head>
 <body>
     
