--- a/DartTeam/index.html
+++ b/DartTeam/index.html
@@ -4,11 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Andres Sosa, Danellys Iriarte y Ana Mauri </title>
+    <title> Andres Sosa, Danellys Iriarte y Ana Mauri !! </title>
 </head>
 <body>
     
-    <h1> Guten Tag ! </h1>
+    <h1> Guten Tag, Dart Team </h1>
 
 </body>
 </html>
