--- a/Salchipapas/Caprichosa.html
+++ b/Salchipapas/Caprichosa.html
@@ -1,1 +1,11 @@
-<p> Hola Mundobitch </p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Esta vaina</title>
+</head>
+<body>
+    <p> Hola Mundobitch </p>
+</body>
+</html>
