--- a/Los Extraditables/Murillo.html
+++ b/Los Extraditables/Murillo.html
@@ -12,6 +12,14 @@
     <p>Para más información, visita <a href="https://www.example.com">este enlace</a>.</p>
     <p>Gracias por tu atención.</p>
     <p>Fin del documento.</p>
-    <p>Si tienes alguna pregunta, no dudes en contactarnos.</p>    
+    <p>Si tienes alguna pregunta, no dudes en contactarnos.</p> 
+    
+    La pechu
+    <h2>¿Por cuanto la pechu?</h2>
+    <p>La pechu es un término coloquial que se refiere a una prenda de vestir, específicamente una camiseta o blusa. En este contexto, se utiliza para preguntar por el precio de dicha prenda.</p>
+    <p>La frase "¿Por cuanto la pechu?" es una forma de solicitar información sobre el costo de la camiseta o blusa que se está considerando comprar.</p>
+    <p>En la cultura popular, esta expresión puede ser utilizada de manera humorística o sarcástica, especialmente en situaciones informales entre amigos o conocidos.</p>
+    <p>Es importante recordar que el uso de términos coloquiales puede variar según la región y el contexto cultural, por lo que es recomendable tener en cuenta el tono y la audiencia al utilizar expresiones como esta.</p>
+    <p>En resumen, "¿Por cuanto la pechu?" es una pregunta sencilla que busca conocer el precio de una camiseta o blusa, y puede tener connotaciones humorísticas en ciertos contextos.</p>
 </body>
 </html>
